<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_camera_24dp"
        android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_mail"
        android:icon="@drawable/ic_mail_24dp"
        android:title="@string/title_mail" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_user_24dp"
        android:title="@string/title_user" />

</menu>
