<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.trantordev.shopapp.feature.product.list.ProductFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_product_list" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.trantordev.shopapp.feature.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.trantordev.shopapp.feature.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_mail"
        android:name="com.trantordev.shopapp.feature.email.EmailFragment"
        android:label="@string/title_mail"
        tools:layout="@layout/fragment_mail" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.trantordev.shopapp.feature.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />



</navigation>